test/grad/good/27.cc
int main()
{
    for (int i = 0; i < 10; i++)
    {
        int j = i;
        return j;
    }
    return y(34,false,true);
}

int y(double x, int z, bool a)
{
    return x == a;
}