test/grad/bad/27.cc
#include <string>

using std::string;

int main()
{
    for (int i = 0; i < 10; i++)
    {
        int j = i;
        return j;
    }
    return y(34,"nope",true);
}

int y(double x, int z, bool a)
{
    return x == a;
}